crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.invalid-jsx-captures-context-variable/error.txt
Found 1 error:

Error: This value cannot be modified

Modifying a value used previously in JSX is not allowed. Consider moving the modification before the JSX.

error.invalid-jsx-captures-context-variable.ts:22:2
  20 |     />
  21 |   );
> 22 |   i = i + 1;
     |   ^ `i` cannot be modified
  23 |   items.push(
  24 |     <Stringify
  25 |       key={i}
